# FlowSwitch

./: .gitignore  README.ja.md  README.md  example-config.json  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release-macos.yml
scripts/: sign-release.ps1  verify-signature.ps1
src/: App.css  App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  drop_target.rs  executor.rs  lib.rs  main.rs
src/components/: ExecutionResultView.css  ExecutionResultView.tsx  InfoModal.css  InfoModal.tsx  ModeCard.css  ModeCard.tsx  ModeEditorView.css  ModeEditorView.tsx  ModeListView.css  ModeListView.tsx  SettingsView.css  SettingsView.tsx  Sidebar.css  Sidebar.tsx  WelcomeWizard.css  WelcomeWizard.tsx
src/config/: appMetadata.ts
src/data/: sampleConfig.ts
src/hooks/: useReleaseInfo.ts  useTauri.ts
src/lib/: appInfo.ts
src/store/: appStore.ts
src/types/: config.ts
